static/css/pnyx.css
body {
    background-color: #EEE;
    margin-top: 57px;
}

.autocomplete {
    position: absolute;
    z-index: 100;
    left: 0;
    right: 0;
    max-height: 300px;
    overflow-y: scroll;
}

.card-body img {
    max-width: 100%;
    height: auto;
}

ul.autocomplete li {
    cursor: pointer;
}

ul.autocomplete li:hover {
    background-color: #F7F7F7;
}

ul.comment {
    border-left: 1px solid #CCC;
    padding-left: 1.5em;
}

ul.comment li {
    list-style: none;
    margin-left: 0;
}

.btn-link.btn-xs {
    font-size: .7rem;
    padding: .05rem .25rem;
    line-height: 1;
    border-radius: .1rem;
    cursor: pointer;
}

.register-frame .panel-left, .login-frame .panel-left {
    width: 156px;
    height: 100vh;
    background-image: url('/static/images/sidebar-pnyx.svg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
}

.form-control.selectize-control {
    height: 38px;
}

.navbar-search-form {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.is-flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.wider-max {
    max-width: 1720px;
}

@media (min-width: 992px) {

.lonely-column {
    max-width: 350px;
}

}

.user-profile-pic {
    height: 80px;
    width: 80px;
    line-height: 100px;
    margin-top: 15px;
    margin-bottom: -30px;
    border-radius: 5px;
    border: 3px solid #FFF;
}

.form-textarea {
    min-height: 200px;
}

.vote-counter {
    position: relative;
}

.vote-counter-info {
    transition: all .35s ease;
    position: absolute;
    margin-top: 0.5em;
    margin-left: -1em;
    opacity: 0;
    color: #000;
}

.vote-counter-info.downvote {
    color: red;
}

.vote-counter-info.show {
    opacity: 1;
    transform: translateX(-50px) rotate(360deg) scale(2.0);
}

.vote-counter-info.hide {
    opacity: 0;
}

.user-info-card {
    background-image: url('/static/images/sidebar-pnyx.svg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center 45%;
}

